fix: employee search, swagger and query (#51)